overflow fix

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,10 @@ html {
 body {
     font-family: sans-serif;
     padding: 0;
+    
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
     margin: 0;
 }
 
